Wed Aug 27 08:48:04 2014  fox

     169* archive.sh
          src/group.c
          Archive: 1.0021

     168* include/ctw.h
          include/ctwP.h
          include/fcterm.h
          include/sequence.h
          machines/linux-x86_64.sh
          makefile
          mkseq.sh
          src/ctw.c
          src/fcterm.c
          src/group.c
          src/term.c
          Added group support and the "fcterm <cmd>" subcommands.

Tue Aug 12 23:33:45 2014  fox

     167* include/ctw.h
          include/fcterm.h
          src/ctw.c
          src/fcterm.c
          Add "Search" to the popup menu.

Sun Jul  6 22:10:26 2014  fox

     166* include/ctw.h
          include/sequence.h
          mkseq.sh
          samples/24-bit-color.pl
          src/ctw.c
          src/ptysrv.c
          src/term.c
          Add ESC[38;2;rr;gg;bb;m and ESC[48;2;rr;gg;bb;m support

Thu Jul  3 21:25:41 2014  fox

     165* src/term.c
          More aggressive backing off in cb_read to avoid uncontrol ^C.

Wed Jul  2 22:33:44 2014  fox

     164* makefile
          src/term.c
          Fix the infinite output/Ctrl-C problem by terminating cb_read
	  if any X11 input.

Sat May 31 13:37:52 2014  fox

     163* 
          include/ctw.h
          include/ctwP.h
          src/ctw.c
          Build with stpcpy to workaround gcc/glibc bug.

Fri May 23 23:05:11 2014  fox

     162* src/ctw.c
          Add hyperlink detection/display.

Sat Jan 25 21:20:03 2014  fox

     161* README, makefile, src/fcterm.c, src/scrbar.c:
        Make the background panel less bright to make it clearer.

Tue Aug 27 22:39:16 2013  fox

     160* armv6l: binary supported

Tue Dec 18 23:01:08 2012  fox

     159* ctw.c: Fix cursor positioning for special line drawing (gridlines).

Mon Oct 29 22:58:58 2012  fox

     158* build.h: 4.34

     157* ctw.c: Add support for ESC[? p1;p2;p3 c Linux cursors.

Sun Sep  9 09:22:02 2012  fox

     156* build.h: 4.33

     155* ctw.c: read_modifier_keys: Avoid redoing multiple times.
